# duckdb_scanner_example

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  duckconfigure  extension_config.cmake
.github/workflows/: build_and_tests.yml  build_duckdb_wasm.yml  build_wasm.yml
data/: test.csv
dockerfiles/build-wasm/: Dockerfile  README.md
dockerfiles/duckdb-wasm/: Dockerfile  README.md
makefiles/: README.md
src/: CMakeLists.txt  csv_file_storage.cpp  csv_scanner_extension.cpp  scan_csv.cpp
src/include/: csv_file_storage.hpp  csv_scanner.hpp  read_only_storage.hpp
test/sql/: csv_scanner.test
